--- a/public/index.html
+++ b/public/index.html
@@ -2,28 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
-    />
-    <link rel="stylesheet" href="../src/style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <main class="container">
-      <article>
-        <h1>Witaj w sklepie internetowym 😱 Alledrogo 😱</h1>
-      </article>
-      <article class="products-list-container">
-        <div class="product-container">
-          <p>Name: <b>iPhone 9</b></p>
-          <p>Price: <b>549</b></p>
-          <div class="thumbnail-container">
-            <img src="https://i.dummyjson.com/data/products/1/thumbnail.jpg" />
-          </div>
-          <button>Dodaj do koszyka</button>
-        </div>
-      </article>
-    </main>
-  </body>
+  <body></body>
 </html>
